Ajout de la navbar

--- a/index.html
+++ b/index.html
@@ -13,19 +13,21 @@
     
   </head>
   <body>
-    <header>
-      <div>
-        <img src="./images/logo/Reservia@3x.png" alt="">
+    <header class="topbar">
+      <div class="logo_header">
+        <img class="logo" src="./images/logo/Reservia@3x.png" alt="logo Reservia">
       </div>
-      <div>
-        <ul>
-          <li>Hébergements</li>
-          <li>Activités</li>
-          <li>S'inscrire</li>
-        </ul>
-      </div>
+        <nav>
+          <ul>
+            <li>Hébergements</li>
+            <li>Activités</li>
+            <li>S'inscrire</li>
+          </ul>
+        </nav>  
     </header>
-    <p>Test 2</p>
+    <section class="intro">
+      <p>Test 03 🚀 </p>
+    </section>
   </body>
 </html>
 
