Ajout basique de l'introduction site (formulaire)

--- a/index.html
+++ b/index.html
@@ -21,12 +21,19 @@
           <ul>
             <li>Hébergements</li>
             <li>Activités</li>
-            <li>S'inscrire</li>
+            <li class="gras">S'inscrire</li>
           </ul>
         </nav>  
     </header>
     <section class="intro">
-      <p>Test 03 🚀 </p>
+      <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+      <p>En plein centre ville ou en pleine nature</p>
+        <form action="">
+          <i class="fas fa-map-marker-alt"></i>
+          <input type="text" id="city" name="city_name" placeholder="Marseille, France">
+          <button for="name">Rechercher</button>
+
+        </form>
     </section>
   </body>
 </html>
