Modif Header - Modification Images

--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
           <h3> Hébergements à Marseille</h3>
           <div class="heb_grille">
             <div class="heb_carte">
-              <img src="./images/hebergements/3_medium/auberge_la_cannebiere.jpg" alt="Auberge_la_cannebiere">
+              <div class="image">
+                <img src="./images/hebergements/3_medium/auberge_la_cannebiere.jpg" alt="Auberge_la_cannebiere">
+              </div>
               <div class="heb_description_carte">
                 <p class="gras"> Auberge de la Cannebière</p>
                 <div class="heb_description_nuit">
@@ -83,7 +85,9 @@
               </div>
             </div>
             <div class="heb_carte">
-              <img src="./images/hebergements/3_medium/hotel_port.jpg" alt="Hôtel du port">
+              <div class="image">
+                <img src="./images/hebergements/3_medium/hotel_port.jpg" alt="Hôtel du port">
+              </div>
               <div class="heb_description_carte">
                 <p class="gras">Hôtel du port</p>
                 <div class="heb_description_nuit">
@@ -100,7 +104,9 @@
               </div>
             </div>
             <div class="heb_carte">
-              <img src="./images/hebergements/3_medium/hotel_les_mouettes.jpg" alt="hotel les mouettes">
+              <div class="image">
+                <img src="./images/hebergements/3_medium/hotel_les_mouettes.jpg" alt="hotel les mouettes">
+              </div>
               <div class="heb_description_carte">
                 <p class="gras">Hôtel Les mouettes</p>
                 <div class="heb_description_nuit">
@@ -117,7 +123,9 @@
               </div>
             </div>
             <div class="heb_carte">
-              <img src="./images/hebergements/3_medium/hotel_de_la_mer.jpg" alt="hotel de la mer">
+              <div class="image">
+                <img src="./images/hebergements/3_medium/hotel_de_la_mer.jpg" alt="hotel de la mer">
+              </div>
               <div class="heb_description_carte">
                 <p class="gras">Hôtel de la mer</p>
                 <div class="heb_description_nuit">
@@ -134,7 +142,9 @@
               </div>
             </div>
             <div class="heb_carte">
-              <img src="./images/hebergements/3_medium/auberge_le_panier.jpg" alt="auberge le panier">
+              <div class="image">
+                <img src="./images/hebergements/3_medium/auberge_le_panier.jpg" alt="auberge le panier">
+              </div>
               <div class="heb_description_carte">
                 <p class="gras">Auberge Le Panier</p>
                 <div class="heb_description_nuit">
@@ -151,7 +161,9 @@
               </div>
             </div>
             <div class="heb_carte">
-              <img src="./images/hebergements/3_medium/hotel_chez_amina.jpg" alt="hotel chez amina">
+              <div class="image">
+                <img src="./images/hebergements/3_medium/hotel_chez_amina.jpg" alt="hotel chez amina">
+              </div>
               <div class="heb_description_carte">
                 <p class="gras">Hôtel chez Amina</p>
                 <div class="heb_description_nuit">
