--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
               </div>
             </div>
           </div>
+          <p class="gras affiche_plus">Afficher plus</p>
         </section>
         <section class="Populaire">
           <h3> Les plus populaires</h3>
@@ -238,8 +239,69 @@
           </div>
         </section>
       </section>
+      <section class="activites">
+        <h3> Activités a Marseille </h3>
+        <div class="activites_flex">
+          <div class="image_2_hauteur">
+            <img src="./images/activites/3_medium/vieux_port.jpg" alt="Vieux Port">
+            <div class="desc_activites gras">
+                <p>Vieux Port</p>
+            </div>
+          </div>
+          <div class="act_image">
+            <div class="image_1_hauteur">
+              <img src="./images/activites/3_medium/fort_de_pomegues.jpg" alt="Fort de Pomègues">
+            <div class="desc_activites gras">
+                <p>Fort de Pomègues</p>
+            </div>
+            </div>
+            <div class="image_1_hauteur">
+              <img src="./images/activites/3_medium/iles_de_frioul.jpg" alt="Îles de Frioul">
+              <div class="desc_activites gras">
+                  <p>Îles de Frioul</p>
+              </div>
+            </div>
+          </div>
+          <div class="image_2_hauteur">
+            <img src="./images/activites/3_medium/parc_national_des_calanques.jpg" alt="Parc National des Calanques">
+            <div class="desc_activites gras">
+                <p>Parc National des Calanques</p>
+            </div>
+          </div>
+          <div class="act_image">
+            <div class="image_1_hauteur">
+              <img src="./images/activites/3_medium/notre_dame_de_la_garde.jpg" alt="Notre Dame de la Garde">
+            <div class="desc_activites gras">
+                <p>Notre Dame de la Garde</p>
+            </div>
+            </div>
+            <div class="image_1_hauteur">
+              <img src="./images/activites/3_medium/parc_longchamp.jpg" alt="Parc Longchamp">
+              <div class="desc_activites gras">
+                  <p>Parc Longchamp</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      </section>
       <footer>
-        a
+        <div class="footer_propos">
+          <p class="footer_titre gras">A propos</p>
+          <a href="">Fonctionnement</a>
+          <a href="">Conditions générales de ventes</a>
+          <a href="">Données et confidentialité</a>
+        </div>
+        <div class="footer_hebergement">
+          <p class="footer_titre gras">Nos hébergements</p>
+          <a href="">Charte qualité</a>
+          <a href="">Soumettre votre hôtel</a>
+        </div>
+        <div class="footer_assistance">
+          <p class="footer_titre gras">Assistance</p>
+          <a href="">Centre d'aide</a>
+          <a href="">Nous contacter</a>
+        </div>
       </footer>
   </body>
 </html>
