--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
   </head>
   <body>
-    <section class="page">
+    <div class="page">
       <header class="topbar">
         <div class="logo_header">
           <img class="logo" src="./images/logo/Reservia@3x.png" alt="logo Reservia">
@@ -28,7 +28,7 @@
           </nav>  
       </header>
       <section class="intro">
-        <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+        <h2>Trouvez votre hébergement pour des vacances de rêve</h2>
         <p>En plein centre ville ou en pleine nature</p>
         <form class="form_recherche">
           <i class="fas fa-map-marker-alt"></i>
@@ -36,7 +36,7 @@
           <button class="btn_recherche">Rechercher</button>
         </form>
         <div class="filtre">
-          <h2>Filtres</h2>
+          <h3>Filtres</h3>
           <form class="form_filtre">
             <div>
               <div class="icon_filtre"><i class="fas fa-money-bill-wave"></i></div>
@@ -62,15 +62,15 @@
         </div>
       </section>
       <section class="Resultat">
-        <section class="Hebergement">
-          <h3> Hébergements à Marseille</h3>
+        <div class="Hebergement">
+          <h4> Hébergements à Marseille</h4>
           <div class="heb_grille">
             <div class="heb_carte">
               <div class="image">
                 <img src="./images/hebergements/3_medium/auberge_la_cannebiere.jpg" alt="Auberge_la_cannebiere">
               </div>
               <div class="heb_description_carte">
-                <p class="gras"> Auberge de la Cannebière</p>
+                <p class="gras heb_titre"> Auberge de la Cannebière</p>
                 <div class="heb_description_nuit">
                   <p>Nuit à partir de </p>
                   <p class="gras prix">25€</p>
@@ -89,7 +89,7 @@
                 <img src="./images/hebergements/3_medium/hotel_port.jpg" alt="Hôtel du port">
               </div>
               <div class="heb_description_carte">
-                <p class="gras">Hôtel du port</p>
+                <p class="gras heb_titre">Hôtel du port</p>
                 <div class="heb_description_nuit">
                   <p>Nuit à partir de </p>
                   <p class="gras prix">52€</p>
@@ -108,7 +108,7 @@
                 <img src="./images/hebergements/3_medium/hotel_les_mouettes.jpg" alt="hotel les mouettes">
               </div>
               <div class="heb_description_carte">
-                <p class="gras">Hôtel Les mouettes</p>
+                <p class="gras heb_titre">Hôtel Les mouettes</p>
                 <div class="heb_description_nuit">
                   <p>Nuit à partir de </p>
                   <p class="gras prix">76€</p>
@@ -127,7 +127,7 @@
                 <img src="./images/hebergements/3_medium/hotel_de_la_mer.jpg" alt="hotel de la mer">
               </div>
               <div class="heb_description_carte">
-                <p class="gras">Hôtel de la mer</p>
+                <p class="gras heb_titre">Hôtel de la mer</p>
                 <div class="heb_description_nuit">
                   <p>Nuit à partir de </p>
                   <p class="gras prix">46€</p>
@@ -146,7 +146,7 @@
                 <img src="./images/hebergements/3_medium/auberge_le_panier.jpg" alt="auberge le panier">
               </div>
               <div class="heb_description_carte">
-                <p class="gras">Auberge Le Panier</p>
+                <p class="gras heb_titre">Auberge Le Panier</p>
                 <div class="heb_description_nuit">
                   <p>Nuit à partir de </p>
                   <p class="gras prix">23€</p>
@@ -165,7 +165,7 @@
                 <img src="./images/hebergements/3_medium/hotel_chez_amina.jpg" alt="hotel chez amina">
               </div>
               <div class="heb_description_carte">
-                <p class="gras">Hôtel chez Amina</p>
+                <p class="gras heb_titre">Hôtel chez Amina</p>
                 <div class="heb_description_nuit">
                   <p>Nuit à partir de </p>
                   <p class="gras prix">96€</p>
@@ -181,14 +181,14 @@
             </div>
           </div>
           <p class="gras affiche_plus">Afficher plus</p>
-        </section>
-        <section class="Populaire">
-          <h3> Les plus populaires</h3>
+        </div>
+        <div class="Populaire">
+          <h4> Les plus populaires</h4>
           <div class="pop_grille">
             <div class="pop_carte">
               <img src="./images/hebergements/3_medium/hotel_le_soleil_du_matin.jpg" alt="hotel le soleil du matin">
               <div class="pop_description_carte">
-                <p class="gras">Hôtel Le soleil du matin</p>
+                <p class="gras pop_titre">Hôtel Le soleil du matin</p>
                 <div class="pop_description_nuit">
                   <p>Nuit à partir de </p>
                   <p class="gras prix">128€</p>
@@ -205,7 +205,7 @@
             <div class="pop_carte">
               <img src="./images/hebergements/3_medium/au_coeur_de-leau_chambre_dhotes.jpg" alt="au coeur de l'eau chambre d'hôtes">
               <div class="pop_description_carte">
-                <p class="gras">Au coeur de l'eau Chambre d'hôtes</p>
+                <p class="gras pop_titre">Au coeur de l'eau Chambre d'hôtes</p>
                 <div class="pop_description_nuit">
                   <p>Nuit à partir de </p>
                   <p class="gras prix">71€</p>
@@ -222,7 +222,7 @@
             <div class="pop_carte">
               <img src="./images/hebergements/3_medium/hotel_tout_bleu_et_blanc.jpg" alt="Hôtel Tout bleu et Blanc">
               <div class="pop_description_carte">
-                <p class="gras">Hôtel Tout bleu et Blanc</p>
+                <p class="gras pop_titre">Hôtel Tout bleu et Blanc</p>
                 <div class="pop_description_nuit">
                   <p>Nuit à partir de </p>
                   <p class="gras prix">68€</p>
@@ -237,54 +237,54 @@
               </div>
             </div>
           </div>
-        </section>
+        </div>
       </section>
       <section class="activites">
-        <h3> Activités a Marseille </h3>
+        <h4> Activités a Marseille </h4>
         <div class="activites_flex">
           <div class="image_2_hauteur">
             <img src="./images/activites/3_medium/vieux_port.jpg" alt="Vieux Port">
-            <div class="desc_activites gras">
-                <p>Vieux Port</p>
+            <div class="desc_activites">
+                <p class="gras">Vieux Port</p>
             </div>
           </div>
           <div class="act_image">
             <div class="image_1_hauteur">
               <img src="./images/activites/3_medium/fort_de_pomegues.jpg" alt="Fort de Pomègues">
             <div class="desc_activites gras">
-                <p>Fort de Pomègues</p>
+                <p class="gras">Fort de Pomègues</p>
             </div>
             </div>
             <div class="image_1_hauteur">
               <img src="./images/activites/3_medium/iles_de_frioul.jpg" alt="Îles de Frioul">
               <div class="desc_activites gras">
-                  <p>Îles de Frioul</p>
+                  <p class="gras">Îles de Frioul</p>
               </div>
             </div>
           </div>
           <div class="image_2_hauteur">
             <img src="./images/activites/3_medium/parc_national_des_calanques.jpg" alt="Parc National des Calanques">
             <div class="desc_activites gras">
-                <p>Parc National des Calanques</p>
+                <p class="gras">Parc National des Calanques</p>
             </div>
           </div>
           <div class="act_image">
             <div class="image_1_hauteur">
               <img src="./images/activites/3_medium/notre_dame_de_la_garde.jpg" alt="Notre Dame de la Garde">
             <div class="desc_activites gras">
-                <p>Notre Dame de la Garde</p>
+                <p class="gras">Notre Dame de la Garde</p>
             </div>
             </div>
             <div class="image_1_hauteur">
               <img src="./images/activites/3_medium/parc_longchamp.jpg" alt="Parc Longchamp">
               <div class="desc_activites gras">
-                  <p>Parc Longchamp</p>
+                  <p class="gras">Parc Longchamp</p>
               </div>
             </div>
           </div>
         </div>
       </section>
-      </section>
+      </div>
       <footer>
         <div class="footer_propos">
           <p class="footer_titre gras">A propos</p>
