Modification post-reunion + Preparation Responsive

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         </div>
           <nav>
             <ul>
-              <li class="page_active">Hébergements</li>
-              <li>Activités</li>
-              <li class="nav_inscrire">S'inscrire</li>
+              <li class="page_active"><a href="">Hébergements</a></li>
+              <li> <a href=""> Activités </a></li>
+              <li class="nav_inscrire"><a href="">S'inscrire</a></li>
             </ul>
           </nav>  
       </header>
@@ -37,7 +37,7 @@
         </form>
         <div class="filtre">
           <h3>Filtres</h3>
-          <form class="form_filtre">
+          <div class="div_filtre">
             <div>
               <div class="icon_filtre"><i class="fas fa-money-bill-wave"></i></div>
               <button>Économique</button>
@@ -54,7 +54,7 @@
               <div class="icon_filtre"><i class="fas fa-dog"></i></div>
               <button>Animaux autorisés</button>
             </div>
-          </form>
+          </div>
         </div>
         <div class="information_recherche">
           <i class="fas fa-info"></i>
@@ -70,7 +70,7 @@
                 <img src="./images/hebergements/3_medium/auberge_la_cannebiere.jpg" alt="Auberge_la_cannebiere">
               </div>
               <div class="heb_description_carte">
-                <p class="gras heb_titre"> Auberge de la Cannebière</p>
+                <h5 class="gras heb_titre"> Auberge de la Cannebière</h5>
                 <div class="heb_description_nuit">
                   <p>Nuit à partir de </p>
                   <p class="gras prix">25€</p>
@@ -89,7 +89,7 @@
                 <img src="./images/hebergements/3_medium/hotel_port.jpg" alt="Hôtel du port">
               </div>
               <div class="heb_description_carte">
-                <p class="gras heb_titre">Hôtel du port</p>
+                <h5 class="gras heb_titre">Hôtel du port</h5>
                 <div class="heb_description_nuit">
                   <p>Nuit à partir de </p>
                   <p class="gras prix">52€</p>
@@ -108,7 +108,7 @@
                 <img src="./images/hebergements/3_medium/hotel_les_mouettes.jpg" alt="hotel les mouettes">
               </div>
               <div class="heb_description_carte">
-                <p class="gras heb_titre">Hôtel Les mouettes</p>
+                <h5 class="gras heb_titre">Hôtel Les mouettes</h5>
                 <div class="heb_description_nuit">
                   <p>Nuit à partir de </p>
                   <p class="gras prix">76€</p>
@@ -127,7 +127,7 @@
                 <img src="./images/hebergements/3_medium/hotel_de_la_mer.jpg" alt="hotel de la mer">
               </div>
               <div class="heb_description_carte">
-                <p class="gras heb_titre">Hôtel de la mer</p>
+                <h5 class="gras heb_titre">Hôtel de la mer</h5>
                 <div class="heb_description_nuit">
                   <p>Nuit à partir de </p>
                   <p class="gras prix">46€</p>
@@ -146,7 +146,7 @@
                 <img src="./images/hebergements/3_medium/auberge_le_panier.jpg" alt="auberge le panier">
               </div>
               <div class="heb_description_carte">
-                <p class="gras heb_titre">Auberge Le Panier</p>
+                <h5 class="gras heb_titre">Auberge Le Panier</h5>
                 <div class="heb_description_nuit">
                   <p>Nuit à partir de </p>
                   <p class="gras prix">23€</p>
@@ -165,7 +165,7 @@
                 <img src="./images/hebergements/3_medium/hotel_chez_amina.jpg" alt="hotel chez amina">
               </div>
               <div class="heb_description_carte">
-                <p class="gras heb_titre">Hôtel chez Amina</p>
+                <h5 class="gras heb_titre">Hôtel chez Amina</h5>
                 <div class="heb_description_nuit">
                   <p>Nuit à partir de </p>
                   <p class="gras prix">96€</p>
@@ -188,7 +188,7 @@
             <div class="pop_carte">
               <img src="./images/hebergements/3_medium/hotel_le_soleil_du_matin.jpg" alt="hotel le soleil du matin">
               <div class="pop_description_carte">
-                <p class="gras pop_titre">Hôtel Le soleil du matin</p>
+                <h5 class="gras pop_titre">Hôtel Le soleil du matin</h5>
                 <div class="pop_description_nuit">
                   <p>Nuit à partir de </p>
                   <p class="gras prix">128€</p>
@@ -205,7 +205,7 @@
             <div class="pop_carte">
               <img src="./images/hebergements/3_medium/au_coeur_de-leau_chambre_dhotes.jpg" alt="au coeur de l'eau chambre d'hôtes">
               <div class="pop_description_carte">
-                <p class="gras pop_titre">Au coeur de l'eau Chambre d'hôtes</p>
+                <h5 class="gras pop_titre">Au coeur de l'eau Chambre d'hôtes</h5>
                 <div class="pop_description_nuit">
                   <p>Nuit à partir de </p>
                   <p class="gras prix">71€</p>
@@ -222,7 +222,7 @@
             <div class="pop_carte">
               <img src="./images/hebergements/3_medium/hotel_tout_bleu_et_blanc.jpg" alt="Hôtel Tout bleu et Blanc">
               <div class="pop_description_carte">
-                <p class="gras pop_titre">Hôtel Tout bleu et Blanc</p>
+                <h5 class="gras pop_titre">Hôtel Tout bleu et Blanc</h5>
                 <div class="pop_description_nuit">
                   <p>Nuit à partir de </p>
                   <p class="gras prix">68€</p>
@@ -245,40 +245,40 @@
           <div class="image_2_hauteur">
             <img src="./images/activites/3_medium/vieux_port.jpg" alt="Vieux Port">
             <div class="desc_activites">
-                <p class="gras">Vieux Port</p>
+                <h5 class="gras">Vieux Port</h5>
             </div>
           </div>
           <div class="act_image">
             <div class="image_1_hauteur">
               <img src="./images/activites/3_medium/fort_de_pomegues.jpg" alt="Fort de Pomègues">
             <div class="desc_activites gras">
-                <p class="gras">Fort de Pomègues</p>
+                <h5 class="gras">Fort de Pomègues</h5>
             </div>
             </div>
             <div class="image_1_hauteur">
               <img src="./images/activites/3_medium/iles_de_frioul.jpg" alt="Îles de Frioul">
               <div class="desc_activites gras">
-                  <p class="gras">Îles de Frioul</p>
+                  <h5 class="gras">Îles de Frioul</h5>
               </div>
             </div>
           </div>
           <div class="image_2_hauteur">
             <img src="./images/activites/3_medium/parc_national_des_calanques.jpg" alt="Parc National des Calanques">
             <div class="desc_activites gras">
-                <p class="gras">Parc National des Calanques</p>
+                <h5 class="gras">Parc National des Calanques</h5>
             </div>
           </div>
           <div class="act_image">
             <div class="image_1_hauteur">
               <img src="./images/activites/3_medium/notre_dame_de_la_garde.jpg" alt="Notre Dame de la Garde">
             <div class="desc_activites gras">
-                <p class="gras">Notre Dame de la Garde</p>
+                <h5 class="gras">Notre Dame de la Garde</h5>
             </div>
             </div>
             <div class="image_1_hauteur">
               <img src="./images/activites/3_medium/parc_longchamp.jpg" alt="Parc Longchamp">
               <div class="desc_activites gras">
-                  <p class="gras">Parc Longchamp</p>
+                  <h5 class="gras">Parc Longchamp</h5>
               </div>
             </div>
           </div>
