Modif Activites_ flex -> grid

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       </section>
       <section class="activites">
         <h4> Activités a Marseille </h4>
-        <div class="activites_flex">
+        <div class="activites_grid">
           <div class="image_2_hauteur">
             <img src="./images/activites/3_medium/vieux_port.jpg" alt="Vieux Port">
             <div class="desc_activites">
