--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
             name="city_name"
             placeholder="Marseille, France"
           />
-          <button class="btn_recherche">Rechercher</button>
+          <button class="btn_recherche">
+            <span>Rechercher</span>
+            <i class="fas fa-search"></i>
+          </button>
         </form>
         <div class="filtre">
           <h3>Filtres</h3>
@@ -76,8 +79,8 @@
           <p>Plus de 500 logements sont disponibles dans cette ville</p>
         </div>
       </section>
-      <section class="Resultat">
-        <div class="Hebergement">
+      <section class="resultat">
+        <div class="hebergement">
           <h4>Hébergements à Marseille</h4>
           <div class="heb_grille">
             <div class="heb_carte">
@@ -227,7 +230,7 @@
           </div>
           <p class="gras affiche_plus">Afficher plus</p>
         </div>
-        <div class="Populaire">
+        <div class="populaire">
           <div class="pop_div">
             <h4>Les plus populaires</h4>
             <i class="fas fa-chart-line" aria-hidden="true"></i>
