Dernier Ajustement responsive

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </div>
         <nav>
           <ul>
-            <li class="page_active"><a href="">Hébergements</a></li>
-            <li><a href=""> Activités </a></li>
+            <li class="page_active #hebergement"><a href="">Hébergements</a></li>
+            <li><a href="#activites"> Activités </a></li>
             <li class="nav_inscrire"><a href="">S'inscrire</a></li>
           </ul>
         </nav>
@@ -307,7 +307,7 @@
           </div>
         </div>
       </section>
-      <section class="activites">
+      <section class="activites" id="activites">
         <h4>Activités a Marseille</h4>
         <div class="activites_grid">
           <div class="image_2_hauteur">
