--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
         <div class="filtre">
           <h3>Filtres</h3>
           <div class="div_filtre">
-            <div>
+            <div class="contenu_filtre">
               <div class="icon_filtre">
                 <i class="fas fa-money-bill-wave"></i>
               </div>
               <button>Économique</button>
             </div>
-            <div>
+            <div class="contenu_filtre">
               <div class="icon_filtre"><i class="fas fa-child"></i></div>
               <button>Familial</button>
             </div>
-            <div>
+            <div class="contenu_filtre">
               <div class="icon_filtre"><i class="fas fa-heart"></i></div>
               <button>Romantique</button>
             </div>
-            <div>
+            <div class="contenu_filtre">
               <div class="icon_filtre"><i class="fas fa-dog"></i></div>
               <button>Animaux autorisés</button>
             </div>
