Modif Position Ancrage

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <nav>
           <ul>
-            <li class="page_active #hebergement"><a href="">Hébergements</a></li>
+            <li class="page_active"><a href="#hebergement">Hébergements</a></li>
             <li><a href="#activites"> Activités </a></li>
             <li class="nav_inscrire"><a href="">S'inscrire</a></li>
           </ul>
@@ -82,7 +82,7 @@
       <section class="resultat">
         <div class="hebergement">
           <h4>Hébergements à Marseille</h4>
-          <div class="heb_grille">
+          <div class="heb_grille" id="hebergement">
             <div class="heb_carte">
               <a href="">
                 <div class="image">
